refactor: simplify code structure and improve type safety across multiple classes; replace collections with toList() and update method signatures for clarity [SQ issues fixes]